added some constants